[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = pdffile

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

version = 0.0.3

description = A modern pure-python library for reading PDF files
long_description = file: README.md
long_description_content_type = text/markdown
keywords = PDF

url = https://github.com/py-pdf/pdf
project_urls =
    Changelog = https://github.com/py-pdf/pdf/blob/main/CHANGELOG.md
license = BSD
license_file = LICENSE

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development

[options]
python_requires = >=3.7.0
install_requires =
    PyPDF2

[tool:pytest]
addopts = --doctest-modules --cov=. --cov-report html:tests/reports/coverage-html --cov-report term-missing --ignore=docs/ --durations=3 --timeout=30
doctest_encoding = utf-8

[mypy]
exclude = build/
ignore_missing_imports = true
strict = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = false
show_error_codes = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
ignore = E203, W503, PT007
exclude = build/*
per-file-ignores =
    tests/*: ASS001
